--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.19.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-loading-overlay": "^1.0.1",
     "react-scripts": "3.2.0",
     "react-toastify": "^5.4.0",
     "uuid": "^3.3.3"
